fix(style): overflow

--- a/app/src/components/features/rules/RuleBuilder/Help/Help.css
+++ b/app/src/components/features/rules/RuleBuilder/Help/Help.css
@@ -4,6 +4,14 @@
   border-radius: var(--border-radius-md);
 }
 
+.rule-editor-help-content {
+  padding: 1.25rem 0px 0px 1.25rem;
+}
+
+.rule-editor-help-header {
+  padding: 0 1.25rem 10px 0;
+}
+
 .rule-editor-help-container ul,
 li {
   margin: 0;
@@ -11,10 +19,17 @@ li {
   list-style: none;
 }
 
-.rule-editor-help-content {
-  height: 70vh;
-  padding: 1.25rem;
+.rule-editor-help-lists {
+  height: 65vh;
+  overflow: hidden;
+}
+
+.rule-editor-help-lists:hover {
   overflow: auto;
+}
+
+.rule-editor-help-lists li {
+  margin-right: 1.25rem;
 }
 
 .rule-editor-help-back-btn {
@@ -34,7 +49,7 @@ li {
 }
 
 .rule-editor-help-list.external-links li {
-  margin: 12px 0;
+  margin: 12px;
 }
 
 .rule-editor-help-list.external-links a {
@@ -69,8 +84,34 @@ li {
   margin-bottom: 0;
 }
 
+.rule-editor-help-footer {
+  margin-top: 10px;
+  padding: 8px 1.25rem;
+  border-top: 1px solid var(--border-dark);
+  background-color: var(--component-dark-background);
+}
+
 /* docs */
+.rule-editor-docs {
+  height: 65vh;
+  overflow: auto;
+}
+
+.rule-editor-docs-intro {
+  margin-top: 10px;
+}
+
+.docs-section {
+  margin-top: 1.75rem;
+}
+
+.docs-section .title {
+  margin-bottom: 12px;
+}
+
 .rule-editor-docs-demo-video iframe {
+  block-size: auto;
+  max-inline-size: 100%;
   border: 1px solid var(--border-dark);
   border-radius: var(--border-radius-md);
 }
@@ -82,10 +123,4 @@ li {
 .rule-editor-docs-use-cases li {
   list-style: disc;
   color: var(--text-gray);
-}
-
-.rule-editor-help-footer {
-  padding: 8px 1.25rem;
-  border-top: 1px solid var(--border-dark);
-  background-color: var(--component-dark-background);
 }
